# logsentry

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
logsentry/: __init__.py  analyzer.py  cli.py  parser.py  reporter.py
tests/: test_analyzer.py  test_parser.py  test_reporter.py
