[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logsentry"
version = "1.0.0"
description = "CLI tool to analyze server logs and detect security threats."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Derek Muñoz Solís"},
]
dependencies = [
    "rich>=13.0.0",
]

[project.scripts]
logsentry = "logsentry.cli:run"

[project.urls]
Repository = "https://github.com/drame31/logsentry"

[tool.pytest.ini_options]
testpaths = ["tests"]
